--- a/trunk/emacspeak/info/options.texi
+++ b/trunk/emacspeak/info/options.texi
@@ -1444,6 +1444,10 @@ If non-nil, then Google search will use the
 I'm Feeling Lucky button by default.
 @end defvar
 
+@defvar {User Option} emacspeak-websearch-google-number-of-results
+Number of results to return from Goggle search.
+@end defvar
+
 @node emacspeak-widget Options
 @section emacspeak-widget Options
 
