*** empty log message ***

--- a/emacspeak/info/commands.texi
+++ b/emacspeak/info/commands.texi
@@ -3369,6 +3369,26 @@ Browses RSS url under point.
 Browse URL with specified XSL style.
 @end deffn
 
+@deffn {Interactive Command} emacspeak-w3-browse-xml (LOCATION)
+Browse XML+CSS using W3.
+XML files can be rendered by an XML browser that is CSS aware.
+Emacs/W3 is not quite a complete XML+CSS browser, but it  does a
+good enough job for many things, especially the XML files from
+bookshare.org.
+Setting W3 up at present to display any and all XML files at
+present would be a bug, since W3 is an HTML browser --not a true
+XML browser.
+This command opens a specified XML file under the covers and has
+W3 render it using CSS as available. The result on bookshare.org
+XML files is quite usable:
+
+0) You get Aural CSS support.
+
+1) You get a navigable buffer using imenu if you have w3-imenu
+loaded.
+
+@end deffn
+
 @deffn {Interactive Command} emacspeak-w3-browse-xml-url-with-style (STYLE URL &optional UNESCAPE-CHARENT)
 Browse XML URL with specified XSL style.
 @end deffn
